# CppCommon

./: .gitignore  CMakeLists.txt  LICENCE  README.md
examples/math/: point_generator_examples.cpp
include/math/: angles.hpp  math_common.hpp  point_generator.hpp
test/: CMakeLists.txt
test/math/: test_angles.cpp  test_math_common.cpp  test_point_generator.cpp
